--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: "Iowan Old Style";
-    src: url("fonts/2131-font.otf") format("opentype");
+    src: url("fonts/2131-font.woff") format("opentype");
   }
 
   @font-face {
     font-family: "SnellRoundHand";
-    src: url("fonts/SnellBT-Bold.otf") format("opentype");
+    src: url("fonts/SnellBT-Bold.woff") format("opentype");
     weight: 700;
   }
 
   @font-face {
     font-family: "SnellRoundHand";
-    src: url("fonts/SnellBT-Regular.otf") format("opentype");
+    src: url("fonts/SnellBT-Regular.woff") format("opentype");
     weight: 400;
   }
 
   @font-face {
     font-family: "SnellRoundHand";
-    src: url("fonts/SnellRoundhand-BlackScript.otf") format("opentype");
+    src: url("fonts/SnellRoundhand-BlackScript.woff") format("opentype");
     weight: 900;
   }
   @font-face {
     font-family: "SnellRoundHand";
-    src: url("fonts/SnellRoundhand-BoldScript.otf") format("opentype");
+    src: url("fonts/SnellRoundhand-BoldScript.woff") format("opentype");
     weight: 800;
   }
