fix(index.html): add cdn font

--- a/src/var.scss
+++ b/src/var.scss
@@ -1,5 +1,5 @@
 $primary-color: #B9D9AC;
 
-$title-font: 'Iowan Old Style', sans-serif;
-$interaction-font: 'SnellRoundHand', sans-serif;
+$title-font: 'IowanOldSt BT', sans-serif;
+$interaction-font: 'Snell RoundHand', sans-serif;
 $text-font: 'Roboto', sans-serif;
