fix(public/fonts-&-Vue.svelte): export correctly fonts and preload images

--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,6 +1,6 @@
   @font-face {
     font-family: "IowanOldSt BT";
-    src: url("/fonts/2131-font.woff") format("woff");
+    src: url("/fonts/Iowan_Old_Style_bold.woff") format("woff");
   }
 
   @font-face {
