feat(Game/*): add game logique

--- a/src/var.scss
+++ b/src/var.scss
@@ -1,4 +1,5 @@
 $primary-color: #B9D9AC;
+$dark-color: #363D37;
 
 $title-font: 'IowanOldSt BT', sans-serif;
 $interaction-font: 'Snell RoundHand', sans-serif;
